name:                dhall-plus

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis:            Utilities for working with Dhall
description:         Utilities for working with Dhall
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    DhallPlus, DhallPlus.Error, T.DhallPlus
  other-modules:
  default-extensions: FlexibleContexts
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends: base, base-unicode-symbols, deepseq, dhall, enclosed-exceptions
               , mtl, lens, tasty, tasty-hunit, text

               , fpath         >= 1.1.4.2
               , monaderror-io >= 1.1.0.1
               , monadio-plus  >= 1.4.9.0
               , more-unicode  >= 0.0.15.0
               , tasty-plus    >= 1.5.0.1

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite dhall-plus-test
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            dhall-plus-test.hs
  build-depends:      base, dhall-plus, tasty
  default-extensions: NoImplicitPrelude, UnicodeSyntax
  default-language:   Haskell2010

--------------------------------------------------------------------------------
