name:                dhall-plus

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.2.1
synopsis:            Utilities for working with Dhall
description:         Utilities for working with Dhall
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    DhallPlus, DhallPlus.Error, T.DhallPlus
  other-modules:
  default-extensions: FlexibleContexts
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , PatternSynonyms
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends: base, base-unicode-symbols, data-textual, deepseq, dhall
               , enclosed-exceptions, lens, mtl, tasty, tasty-hunit, text
               , text-printer

               , fpath         >= 1.2.0.0
               , has-callstack >= 1.0.1.0
               , monaderror-io >= 1.2.0.0
               , monadio-plus  >= 2.0.0.0
               , more-unicode  >= 0.0.16.0
               , tasty-plus    >= 1.5.1.0

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite dhall-plus-test
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            dhall-plus-test.hs
  build-depends:      base, dhall-plus, tasty
  default-extensions: NoImplicitPrelude, UnicodeSyntax
  default-language:   Haskell2010

--------------------------------------------------------------------------------
